[refactor] replace get(0) with jdk21 api